syntax = "proto2";

import "botstatus.proto";
import "enemy.proto";
import "map.proto";

package Botventure.Messages;

message SensorRequest {
  optional SensorType sensor_type = 1;
}

message SensorResponse {
  optional SensorType sensor_type = 1;
  optional Map map = 2;
  repeated Enemy enemies = 3;
  optional BotStatus bot_status = 4;
}
